2011-03-26  Dustin J. Mitchell <dustin@mozilla.com>
	* perl/Amanda/Util.swg: include fsusage.h early in the generated C
	  to avoid problems with SWIG #undefine-ing 'bool' on Mac OS X with
	  the system-installed Perl

2011-03-25  Jan Görig <jgorig@redhat.com>
	* config/amanda/krb5-security.m4: fix linking against wrong libraries
	  on systems where krb5 directory is libdir and amanda is installed

2011-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix iteration over a list it modify.

2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: read include_list and pass each line as
	  argument for restore operation.

2011-03-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Cast with off_t.
	* application-src/amstar.c: Cast with off_t.

2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amstar.c: Add ACL property.
	* man/xml-source/amstar.8.xml: Document ACL property.

2011-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Add AMANDA_PROG_SUNTAR, --with-suntar=??
	* configure.in: Use AMANDA_PROG_SUNTAR.
	* perl/Amanda/Constants.pm.in: Define $Amanda::Constants::SUNTAR
	* application-src/amsuntar.pl: Use $Amanda::Constants::SUNTAR,
	                               Add SUNTAR-PATH property.
	* man/xml-source/amsuntar.8.xml: Document SUNTAR-PATH property.

2011-03-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Compute maxparts from the list of part.

2011-03-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: If leom is supported by device,
	  then the dle can be split.
	* perl/Amanda/Taper/Worker.pm: Send leom setting to
	  get_splitting_args_from_config.
	* server-src/planner.c: dle can use more than one tape if allow-split
	  is set, this is to handle leom device where splitsize can be 0.

2011-03-10  Jean-Louis Martineau <martineau@zmanda.com>