@@ -22,7 +22,6 @@
 # define FSUSAGE_H_
 
 # include <stdint.h>
-# include <stdbool.h>
 
 struct fs_usage
 {
@@ -30,7 +29,7 @@ struct fs_usage
   uintmax_t fsu_blocks;         /* Total blocks. */
   uintmax_t fsu_bfree;          /* Free blocks available to superuser. */
   uintmax_t fsu_bavail;         /* Free blocks available to non-superuser. */
-  bool fsu_bavail_top_bit_set;  /* 1 if fsu_bavail represents a value < 0.  */
+  int fsu_bavail_top_bit_set;   /* 1 if fsu_bavail represents a value < 0.  */
   uintmax_t fsu_files;          /* Total file nodes. */
   uintmax_t fsu_ffree;          /* Free file nodes. */
 };
