@@ -1,3 +1,10 @@
+2011-03-27  Dustin J. Mitchell <dustin@mozilla.com>
+	* perl/Amanda/Util.swg: revert previous patch
+	* gnulib/Makefile.am gnulib/fsusage.h
+	  gnulib/regenerate/fsusage-no-bool.patch gnulib/regenerate/regenerate:
+	  patch fsusage.h to not use stdbool
+	* device-src/vfs-device.c: don't use 'false' and 'true' (from stdbool)
+
 2011-03-26  Dustin J. Mitchell <dustin@mozilla.com>
 	* perl/Amanda/Util.swg: include fsusage.h early in the generated C
 	  to avoid problems with SWIG #undefine-ing 'bool' on Mac OS X with
